# hyprpilot

./: .gitattributes  .gitignore  .rgignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  Taskfile.yml  mise.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  renovate.json  rustfmt.toml
.config/: nextest.toml
.github/: release-please-config.json
src-tauri/: Cargo.toml  tauri.conf.e2e.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: logging.rs  main.rs  paths.rs
src-tauri/src/acp/: client.rs  commands.rs  mod.rs  permissions.rs  resolve.rs  runtime.rs  session.rs  spawn.rs
src-tauri/src/acp/agents/: claude_code.rs  codex.rs  mod.rs  opencode.rs
src-tauri/src/adapters/: commands.rs  instance.rs  mod.rs  permission.rs  profile.rs  registry.rs  tokens.rs  tool.rs  transcript.rs
src-tauri/src/adapters/acp/: client.rs  commands.rs  instance.rs  instances.rs  mapping.rs  mod.rs  resolve.rs  runtime.rs  spawn.rs
src-tauri/src/adapters/acp/agents/: claude_code.rs  codex.rs  mod.rs  opencode.rs
src-tauri/src/adapters/acp/agents/claude_code/: mod.rs
src-tauri/src/adapters/acp/agents/claude_code/formatters/: bash.rs  edit.rs  glob.rs  grep.rs  kill_shell.rs  mcp.rs  mod.rs  multi_edit.rs  notebook_edit.rs  plan_exit.rs  read.rs  skill.rs  task.rs  terminal.rs  todo.rs  tool_search.rs  web_fetch.rs  web_search.rs  write.rs
src-tauri/src/adapters/acp/agents/codex/: mod.rs
src-tauri/src/adapters/acp/agents/codex/formatters/: approve.rs  edit.rs  exec.rs  guardian.rs  mod.rs  tool.rs  view.rs  web.rs
src-tauri/src/adapters/acp/agents/opencode/: mod.rs
src-tauri/src/adapters/acp/agents/opencode/formatters/: bash.rs  edit.rs  glob.rs  grep.rs  lsp.rs  mod.rs  patch.rs  read.rs  skill.rs  task.rs  todo.rs  webfetch.rs  websearch.rs  write.rs
src-tauri/src/completion/: cancellations.rs  commands.rs  mod.rs
src-tauri/src/completion/hydration/: file.rs  mod.rs  skills.rs
src-tauri/src/completion/source/: candidates.rs  commands.rs  mod.rs  path.rs  ripgrep.rs  skills.rs
src-tauri/src/config/: agents.rs  autostart.rs  daemon.rs  defaults.toml  keymaps.rs  merge_strategies.rs  mod.rs  theme.rs  validations.rs
src-tauri/src/ctl/: agents.rs  client.rs  commands.rs  daemon.rs  diag.rs  events.rs  handlers.rs  instances.rs  mcps.rs  mod.rs  models.rs  modes.rs  overlay.rs  permissions.rs  prompts.rs  session.rs  sessions.rs  skills.rs  status.rs  window.rs
src-tauri/src/daemon/: autostart.rs  desktop.rs  mod.rs  renderer.rs  tray.rs  wm.rs
src-tauri/src/mcp/: loader.rs  mod.rs
src-tauri/src/rpc/: handler.rs  mod.rs  protocol.rs  server.rs  status.rs  topic.rs
src-tauri/src/rpc/handlers/: agents.rs  commands.rs  config.rs  core.rs  daemon.rs  diag.rs  events.rs  instances.rs  mcps.rs  mod.rs  models.rs  modes.rs  overlay.rs  permissions.rs  profiles.rs  prompts.rs  session.rs  sessions.rs  skills.rs  status.rs  util.rs  window.rs
src-tauri/src/skills/: commands.rs  loader.rs  mod.rs  watcher.rs
src-tauri/src/tools/: fs.rs  git.rs  mod.rs  path.rs  sandbox.rs  terminal.rs
src-tauri/src/tools/formatter/: mod.rs  registry.rs  shared.rs  types.rs
src-tauri/src/tools/formatter/kinds/: delete.rs  edit.rs  execute.rs  fetch.rs  mod.rs  move.rs  other.rs  read.rs  search.rs  think.rs
(+561 files in other folders)
