[package]
name = "hyprpilot"
description = "Rust Tauri overlay + unix-socket daemon for agent-driven workflows."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "hyprpilot"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.5", features = [] }

[dependencies]
agent-client-protocol = { version = "0.11", features = ["unstable"] }
anyhow = "1"
async-trait = "0.1"
clap = { version = "4.6", features = ["derive", "env"] }
directories = "6"
garde = { version = "0.22", features = ["derive"] }
globset = "0.4"
libc = "0.2"
notify = "8"
notify-debouncer-full = "0.7"
once_cell = "1"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
shellexpand = "3"
thiserror = "2"
tokio = { version = "1.52", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat"] }
toml = "1"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "tracing-log"] }
tauri = { version = "2.10", features = [] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-log = "2"
tauri-plugin-playwright = { version = "0.2", optional = true }
tauri-plugin-single-instance = "2.4"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1.52", features = ["full", "test-util"] }

[target.'cfg(target_os = "linux")'.dependencies]
gdk = "0.18"
gtk = "0.18"
gtk-layer-shell = { version = "0.8", features = ["v0_6"] }

[features]
default = []
# Enabled by `tauri build` to ship the bundled frontend.
custom-protocol = ["tauri/custom-protocol"]
# `task build:e2e` flips this to expose the Playwright bridge socket;
# never enabled in production builds.
e2e-testing = ["dep:tauri-plugin-playwright"]
